fix js form validation

--- a/styles.css
+++ b/styles.css
@@ -203,10 +203,13 @@ input:invalid {
     border: 1px red solid;
 }
 
-span.error {
+.error {
     color: red;
     font-size: .6em;
     position: absolute;
     margin-top: 3px;
     margin-left: 5px;
+    display: block;
+    width: 240px;
+    background-color: #fff;
 }
